[package]
name = "egui_render_three_d"
description = "egui rendering backend using three-d"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
egui_render_glow = { version = "0.11.0", path = "../egui_render_glow" }
three-d = { git = "https://github.com/asny/three-d.git", version = "0.19", default-features = false }
egui = { workspace = true }
raw-window-handle = { workspace = true }
