[package]
name = "egui_window_glfw_passthrough"
description = "egui windowing backend using Glfw"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["glfw/default"]
all = ["vulkan", "log", "image"]
vulkan = ["glfw/vulkan"]
log = ["glfw/log"]
image = ["glfw/image"]


[dependencies]
glfw = "0.60.0"
tracing = { workspace = true }
egui = { workspace = true }
